# DesignPattern

./: .gitignore  CMakeLists.txt  DesignPattern.sln  README.md
ActionPattern/: ActionPattern.cpp  CMakeLists.txt
CPPBase/: AbstractClass.h  CPPBase.cpp  CPPBase.vcxproj  CPPBase.vcxproj.filters  ReadMe.txt  TypeCompatibilityRule.h  VirtualBaseClass.h  VirtualFun.h  stdafx.cpp  virtualFunc.cd
CreatorPattern/: AbstractFactory.cpp  AbstractFactory.h  AbstractProduct.cpp  AbstractProduct.h  Builder.cpp  Builder.h  CMakeLists.txt  ClassDiagram.cd  CreatePattern.cpp  CreatorPattern.cpp  CreatorPattern.vcxproj  CreatorPattern.vcxproj.filters  Director.cpp  Director.h  Factory.cpp  Factory.h  Prod.cpp  Prod.h  Product.cpp  Product.h  Prototype.cpp  Prototype.h  ReadMe.txt  Singleton.cpp  Singleton.h  stdafx.cpp
CreatorPattern/AbstractFactory/: AbstractFactory.cpp  AbstractFactory.h  AbstractProduct.cpp  AbstractProduct.h
CreatorPattern/Builder/: Builder.cpp  Builder.h  Director.cpp  Director.h  Prod.cpp  Prod.h
CreatorPattern/Debug/: CreatorPattern.pch  vc120.idb
CreatorPattern/Debug/CreatorPattern.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CreatorPattern/Factory/: Factory.cpp  Factory.h  Product.cpp  Product.h
CreatorPattern/Prototype/: Prototype.cpp  Prototype.h
CreatorPattern/Singleton/: Singleton.cpp  Singleton.h
Debug/: CPPBase.ilk  CreatorPattern.ilk  StructPattern.ilk  Test.ilk
StructPattern/: Abstraction.cpp  Abstraction.h  AbstractionImp.cpp  AbstractionImp.h  Adapter.cpp  (+9 more)
(+51 files in other folders)
